[NAE-2027] Netgrif modules
- updated core package